message WeatherMessage {
  required string main = 1;
  required double temp = 2;
  required int32 cloudPercentage = 3;
  required int32 rainAmount = 4;
}
